# sysrepo-plugin-module-versions

./: CMakeLists.txt
modules/: sysrepo-module-versions.yang
scripts/: model-install.sh
src/: module-versions-plugin_2-1-0.c
